--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -51,6 +51,7 @@ form {
             height: 45px;
             font-size: 1.5rem;
             letter-spacing: 0.2rem;
+            margin-top: 32px;
         }
     }
 }
